package com.innopia.bist.view;

import androidx.fragment.app.Fragment;

public class RcuTestFragment extends Fragment {

    public static RcuTestFragment newInstance() {
        return new RcuTestFragment();
    }
}