package com.innopia.bist.ver1.util;

public enum Status {
	ON,
	OFF,
	PENDING
}
