package com.innopia.bist.ver1.util;

public enum TestType {
    ETHERNET,
    WIFI,
    BLUETOOTH,
    USB,
    HDMI,
    CPU,
    MEMORY,
    VIDEO,
    RCU,
	BUTTON
}
